<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TVTracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="title_activity_register">Register</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="title_activity_home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="errorLogin">Invalid login</string>
    <string name="errorRegister">The chosen username already exists</string>
    <string name="errorRegisterEmpty">Please enter values in all fields</string>
    <string name="addShows">Add/Remove Shows</string>
    <string name="profile">Profile</string>
    <string name="myShows">My Shows</string>
    <string name="mostWatched">Most Watched</string>
    <string name="title_activity_shows">Shows</string>
    <string name="title_activity_my_shows">MyShows</string>
    <string name="title_activity_top_shows">TopShows</string>
    <string name="title_activity_show">Show</string>
    <string name="rateThis">Rate This Show</string>
    <string name="myName">Jeffrey Artigues</string>
    <string name="logout">Logout</string>
    <string name="deleteAccount">Delete Account</string>

</resources>