<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register" >

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/loginInput"
        android:text="@string/username" 
        />
    <EditText
        android:id="@+id/loginInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:width="200dp"
        />
    <TextView
        android:id="@+id/pwText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pwInput"
        android:text="@string/password" />
    <EditText
        android:id="@+id/pwInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/loginInput"
        android:layout_alignParentRight="true"
        android:width="200dp"
        />
    <TextView
        android:id="@+id/fnameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fnameInput"
        android:text="@string/firstName" />
    <EditText
        android:id="@+id/fnameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/pwInput"
        android:layout_alignParentRight="true"
        android:width="200dp"
        />
    <TextView
        android:id="@+id/lnameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lnameInput"
        android:text="@string/lastName" />
    <EditText
        android:id="@+id/lnameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/fnameInput"
        android:layout_alignParentRight="true"
        android:width="200dp"
        />
    <Button
        android:id="@+id/createUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/lnameInput"
        android:text="@string/register"
        />
    <TextView
        android:id="@+id/registerErrorUser"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createUser"
        android:textColor="#ff0000"
        android:text="@string/errorRegister" />
    <TextView
        android:id="@+id/registerErrorEmpty"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createUser"
        android:textColor="#ff0000"
        android:text="@string/errorRegisterEmpty" />
</RelativeLayout>